<resources>
    <string name="app_name" translatable="false">MainActivity</string>
    <string name="text_favorites" translatable="false">Favorites</string>
    <string name="text_schedules" translatable="false">Schedules</string>
    <string name="text_music" translatable="false">Music</string>
    <string name="text_cake" translatable="false">Cake</string>
    <string name="discover_popular">Popular</string>
    <string name="discover_favorite">Favorite</string>
    <string name="discover_history">Watched</string>
    <string name="discover_sentences">Sentences</string>
    <string name="discover_patterns">Patterns</string>
    <string name="discover_words">Words</string>
    <string name="discover_genres">Genres</string>
    <string name="discover_mothergoose">Mother Goose / Nursery Rhyme</string>
    <string name="discover_music">Music</string>
    <string name="search_title">What sentence do you want to find?</string>
    <string name="search_recently_record">recently search list</string>
    <string name="search_recommend_sentences">suggested sentence</string>
    <string name="player_relation">relation</string>
    <string name="player_episode">episode</string>
    <string name="player_other_voices">Other Voices</string>
    <string name="player_record">Record</string>
    <string name="player_speak">Speak</string>
    <string name="about_11question">Email</string>
    <string name="menu_myinfo">My Info</string>
    <string name="menu_myinfo_title">My Info</string>
    <string name="menu_myinfo_buy_ticket">Payment subscription</string>
    <string name="menu_myinfo_buy_ticket_desc">regular payment subscription</string>
    <string name="menu_myinfo_cancel_ticket">Cancel regular payment</string>
    <string name="menu_myinfo_cancel_ticket_desc">You can cancel at any time.</string>
    <string name="menu_myinfo_cancel_ticket_confirm">Are you sure you want to cancel your regular payments?</string>
    <string name="ticket_title">Subscription</string>
    <string name="ticket_price">$3</string>
    <string name="ticket_price_desc">3.3 ¢ / 1Day</string>
    <string name="ticket_pay_main_desc">1-month automatic payment</string>
    <string name="ticket_pay_sub_desc">- This is a monthly payment.\n- You can cancel at any time.</string>
    <string name="ticket_pay_button">Purchase</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="joinout">cancel membership</string>
    <string name="logout_confirm">Are you sure you want to log out?</string>
    <string name="joinout_confirm">Are you sure you want to leave?</string>
    <string name="button_no">cancel</string>
    <string name="button_ok">confirm</string>
    <string name="button_justview">GUEST</string>
    <string name="button_deepdive">DEEP DIVE</string>
    <string name="button_youtube">YOUTUBE</string>
    <string name="list_refresh">Refresh List</string>
    <string name="youtube_play_ads_message">Playing YouTube ads</string>
    <string name="list_empty">List is Empty.</string>
    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>
    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>
    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>
    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="label_passwordless">Passwordless Authentication</string>
    <string name="desc_passwordless">Use only an email to authenticate with Firebase.</string>
    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>
    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>
    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>
    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>
    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>
    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="passwordless_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="passwordless_title_text">Passwordless Sign In</string>
    <string name="status_email_not_sent">Send link to your email to get started.</string>
    <string name="status_email_sent">Link sent, check your email to continue.</string>
    <string name="status_link_found">Link received, enter email to sign in.</string>
    <string name="phone_title_text">Phone Number</string>
    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>
    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>
    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="copy_right" translatable="false">Copyrights © %1$d</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="about_page_description">허밍.순</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_application_id" translatable="false">2064391963819713</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb2064391963819713</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
</resources>