<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:hint="@string/search_title"
            android:layout_marginLeft="20dp"
            android:textColorHint="#FFFFFF"
            android:textSize="20dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <android.support.v7.widget.AppCompatEditText
                    android:hint=""
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:imeOptions="actionSearch"
                    android:inputType="text"
                    android:textSize="20dp"
                    android:maxLines="4"
                    android:id="@+id/editText1" >
                    <requestFocus />
                </android.support.v7.widget.AppCompatEditText>
                <ImageView
                    android:id="@+id/mainClearBtn"
                    android:layout_width="30dp"
                    android:layout_height="15dp"
                    android:layout_gravity="right|top"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="0"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_action_clear" />
            </FrameLayout>
            <Button
                android:id="@+id/mainSearchBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:layout_gravity="top"
                android:minHeight="35dip"
                android:minWidth="60dp"
                android:layout_marginRight="10dp"
                android:text="검색"/>
        </LinearLayout>
        <TextView
            android:id="@+id/searchHelperHistoryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_recently_record"
            android:layout_marginLeft="25dp"
            android:textColor="@color/grey4"
            android:textSize="14dp" />
        <android.support.v7.widget.RecyclerView
            android:id="@+id/searchHelperHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="20dp"
            android:fadingEdgeLength="4dp"
            android:overScrollMode="never"
            android:requiresFadingEdge="vertical"/>
        <TextView
            android:id="@+id/searchHelperText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_recommend_sentences"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/grey4"
            android:textSize="14dp" />
        <android.support.v7.widget.RecyclerView
            android:id="@+id/searchHelper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="4dp"
            android:fadingEdgeLength="4dp"
            android:overScrollMode="never"
            android:requiresFadingEdge="vertical"/>
    </LinearLayout>
</RelativeLayout>