<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/colorAccent2"
            android:visibility="gone"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/backbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_keyboard_arrow_left_white_24dp" />

            <TextView
                style="@style/TextStyle_toddaylist2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:text="@string/ticket_title"
                android:textColor="@color/white"
                android:textSize="22dp"
                android:textStyle="bold" />

        </LinearLayout>


    </android.support.design.widget.AppBarLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/scroller"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"

            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="16dp"
                        android:text="@string/ticket_title"
                        android:textColor="@color/colorAccent2"
                        android:textSize="22dp"
                        android:textStyle="bold" />

                </LinearLayout>


                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:padding="4dp"
                    app:cardBackgroundColor="@color/colorAccent2"
                    app:cardElevation="8dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="left"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="16dp"
                                    android:text="@string/ticket_price"
                                    android:textColor="@color/white"
                                    android:textSize="22dp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="16dp"
                                    android:layout_marginTop="4dp"
                                    android:text="@string/ticket_price_desc"
                                    android:textColor="@color/white"
                                    android:textSize="14dp" />

                            </LinearLayout>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="top"
                                android:layout_marginLeft="16dp"
                                android:text="@string/ticket_pay_main_desc"
                                android:textColor="@color/grey"
                                android:textSize="22dp"
                                android:textStyle="bold" />

                        </LinearLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:layout_marginTop="16dp"
                            android:text="@string/ticket_pay_sub_desc"
                            android:textColor="@color/white"
                            android:textSize="14dp" />


                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/pay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:padding="4dp"
                    app:cardBackgroundColor="@color/colorAccent2"
                    app:cardElevation="8dp"
                    app:cardUseCompatPadding="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:layout_marginTop="4dp"
                        android:text="@string/ticket_pay_button"
                        android:textColor="@color/white"
                        android:textSize="14dp" />

                </android.support.v7.widget.CardView>





                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    tools:context="com.eandd700.learn.home.MainActivity">

                    <TextView
                        android:id="@+id/titleTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="title"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <Button
                        android:id="@+id/launchMoreButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:onClick="onClick"
                        android:text="Launch Another One" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="Products"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <TextView
                        android:id="@+id/productIdTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="wait" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/purchaseButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="20dp"
                            android:onClick="onClick"
                            android:text="Purchase" />

                        <Button
                            android:id="@+id/consumeButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="20dp"
                            android:onClick="onClick"
                            android:text="Consume" />

                        <Button
                            android:id="@+id/productDetailsButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="onClick"
                            android:text="Details" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="Subscriptions"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <TextView
                        android:id="@+id/subscriptionIdTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="wait" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/subscribeButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="20dp"
                            android:onClick="onClick"
                            android:text="Subscribe" />

                        <Button
                            android:id="@+id/updateSubscriptionsButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="20dp"
                            android:onClick="onClick"
                            android:text="Update" />

                        <Button
                            android:id="@+id/subsDetailsButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="onClick"
                            android:text="Details" />

                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </android.support.constraint.ConstraintLayout>

</android.support.design.widget.CoordinatorLayout>